--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -10,21 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rakesh.dalalstreetdev.MainActivity">
 
-    <TextView
-        android:text="Response"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="34dp"
-        android:id="@+id/textView2"
-        android:textSize="20sp" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="address"
+        android:text="192.168.43.79"
         android:ems="10"
         android:layout_marginTop="181dp"
         android:id="@+id/editText"
@@ -35,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="port"
+        android:text="3000"
         android:ems="10"
         android:id="@+id/editText2"
         android:layout_below="@+id/editText"
@@ -50,4 +40,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="37dp"
         android:id="@+id/button" />
+
 </RelativeLayout>
