--- a/src/main/res/layout/fragment_leaderboard.xml
+++ b/src/main/res/layout/fragment_leaderboard.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.pragyan.dalalstreet17.Leaderboard">
+    tools:context="com.delta.dalalstreetdev.Leaderboard">
 
 <RelativeLayout
     android:layout_width="match_parent"
